Add ajax search function to Category page, add 403 error page

--- a/Web_Project/src/main/webapp/WEB-INF/classes/lang/Language_vi_VN.properties
+++ b/Web_Project/src/main/webapp/WEB-INF/classes/lang/Language_vi_VN.properties
@@ -4,6 +4,7 @@ all=T\u1EA5t c\u1EA3
 blogs=Tin t\u1EE9c
 policy=Chính sách
 about_us=V\u1EC1 chúng tôi
+contact_us=Liên h\u1EC7
 search_placeholder=Tìm Ki\u1EBFm
 cart=Gi\u1ECF hàng
 hello=Xin chào
